--- a/mindbloom-backend/env.template
+++ b/mindbloom-backend/env.template
@@ -2,14 +2,15 @@
 # Replace with your actual MongoDB Atlas connection string
 MONGODB_URI=mongodb+srv://your_username:your_password@your_cluster.mongodb.net/mindbloom?retryWrites=true&w=majority
 
-# Auth0 Configuration
-# Replace with your actual Auth0 settings
-AUTH0_DOMAIN=your-domain.auth0.com
-AUTH0_AUDIENCE=your-audience
-AUTH0_ISSUER=https://your-domain.auth0.com/
+# Simple Authentication (for development)
+SECRET_KEY=your-secret-key-here
 
 # API Configuration
 API_BASE_URL=http://localhost:8000
 
 # Optional: Google Gemini API (if you want to use real AI)
-GEMINI_API_KEY=your_gemini_api_key_here 
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Ribbon API Configuration
+# Get your API key from https://console.ribbon.ai
+RIBBON_API_KEY=your_ribbon_api_key_here 
