--- a/mindbloom-backend/requirements.txt
+++ b/mindbloom-backend/requirements.txt
@@ -1,8 +1,9 @@
-fastapi
-uvicorn[standard]
-pydantic
-python-multipart
-aiofiles
-httpx
+fastapi==0.104.1
+uvicorn==0.24.0
+motor==3.3.1
+pydantic==2.5.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+httpx==0.25.2
 pytest
 pytest-asyncio 
