--- a/mindbloom-backend/requirements.txt
+++ b/mindbloom-backend/requirements.txt
@@ -6,4 +6,9 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 httpx==0.25.2
 pytest
-pytest-asyncio 
+pytest-asyncio
+google-generativeai==0.3.2
+SpeechRecognition==3.10.0
+pyaudio==0.2.11
+numpy==1.24.3
+python-dotenv==1.0.0 
