--- a/mindbloom/package.json
+++ b/mindbloom/package.json
@@ -3,24 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@react-three/drei": "^9.88.13",
-    "@react-three/fiber": "^8.15.11",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "three": "^0.158.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && echo 'Build complete! Deploy the build folder to your hosting provider.'"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +36,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": ".",
   "proxy": "http://localhost:8000",
   "devDependencies": {
     "autoprefixer": "^10.4.16",
