--- a/mindbloom-backend/requirements.txt
+++ b/mindbloom-backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-motor==3.4.0
+motor==3.5.0
+pymongo==4.8.0
 pydantic==2.8.0
 python-multipart==0.0.6
 httpx==0.28.1
