--- a/mindbloom/package.json
+++ b/mindbloom/package.json
@@ -13,7 +13,8 @@
     "web-vitals": "^2.1.4",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "@heroicons/react": "^2.0.18"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +44,8 @@
   "homepage": ".",
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
