--- a/mindbloom/package.json
+++ b/mindbloom/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
-    "@heroicons/react": "^2.0.18"
+    "@heroicons/react": "^2.0.18",
+    "@auth0/auth0-react": "^2.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
