--- a/mindbloom/package.json
+++ b/mindbloom/package.json
@@ -15,7 +15,12 @@
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
     "@heroicons/react": "^2.0.18",
-    "@auth0/auth0-react": "^2.2.4"
+    "@auth0/auth0-react": "^2.2.4",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/drei": "^9.88.0",
+    "three": "^0.158.0",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.292.0"
   },
   "scripts": {
     "start": "react-scripts start",
